--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /.DS_Store
 .DS_Store
 /CropTest/CropTest/.DS_Store
+/CropTest/CropTest.xcodeproj/project.xcworkspace/xcuserdata/barrettjacobsen.xcuserdatad/UserInterfaceState.xcuserstate
