--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 .DS_Store
 /CropTest/CropTest/.DS_Store
 /CropTest/CropTest.xcodeproj/project.xcworkspace/xcuserdata/barrettjacobsen.xcuserdatad/UserInterfaceState.xcuserstate
+CropTest/build/
